feat: mountain list and detail mountain API fetch done

--- a/app/src/main/res/layout/fragment_cust_detail_mountain.xml
+++ b/app/src/main/res/layout/fragment_cust_detail_mountain.xml
@@ -5,6 +5,18 @@
     android:layout_height="match_parent"
     tools:context=".ui.cust.detailMountain.DetailMountainFragment">
 
+    <ProgressBar
+        android:id="@+id/progressBar"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_centerInParent="true"
+        android:visibility="gone"
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        />
+
     <!-- ScrollView to hold the content -->
     <ScrollView
         android:layout_width="match_parent"
