--- a/app/src/main/res/navigation/nav_graph_cust.xml
+++ b/app/src/main/res/navigation/nav_graph_cust.xml
@@ -91,8 +91,8 @@
         android:label="Detail Mountain"
         tools:layout="@layout/fragment_cust_detail_mountain">
         <argument
-            android:name="mountain"
-            app:argType="com.entsh104.highking.ui.model.Mountain" />
+            android:name="mountainId"
+            app:argType="string" />
         <action
             android:id="@+id/action_nav_detailMountain_to_nav_listTrip"
             app:destination="@id/nav_listTrip" />
