feat: API opentrip list and detail trip done, refactor layout dropdown into item

--- a/app/src/main/res/layout/fragment_cust_list_trip.xml
+++ b/app/src/main/res/layout/fragment_cust_list_trip.xml
@@ -7,6 +7,17 @@
     android:padding="6dp"
     tools:context=".ui.cust.trip.ListTripFragment">
 
+    <ProgressBar
+        android:id="@+id/progressBar"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_centerInParent="true"
+        android:visibility="gone"
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"/>
+
     <androidx.recyclerview.widget.RecyclerView
         android:id="@+id/recyclerViewTrips"
         android:layout_width="0dp"
