feat: create transaction API done

--- a/app/src/main/res/layout/fragment_cust_cart.xml
+++ b/app/src/main/res/layout/fragment_cust_cart.xml
@@ -59,6 +59,7 @@
                         android:layout_weight="1">
 
                         <TextView
+                            android:id="@+id/tvTripName"
                             android:layout_width="wrap_content"
                             android:layout_height="wrap_content"
                             android:text="Trip Kencana"
@@ -67,6 +68,7 @@
                             android:textStyle="bold" />
 
                         <TextView
+                            android:id="@+id/tvTripLocation"
                             android:layout_width="wrap_content"
                             android:layout_height="wrap_content"
                             android:text="Rinjani"
@@ -82,6 +84,7 @@
                     </LinearLayout>
 
                     <TextView
+                        android:id="@+id/tvTripPrice"
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
                         android:text="Rp 150.000"
@@ -114,6 +117,7 @@
                     android:layout_gravity="center_vertical"/>
 
                 <Spinner
+                    android:id="@+id/spinner_quantity"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:entries="@array/quantity_array"
@@ -221,71 +225,10 @@
                     android:layout_marginBottom="8dp" />
 
                 <LinearLayout
+                    android:id="@+id/ll_hiker_item"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:orientation="vertical">
-
-                    <LinearLayout
-                        android:id="@+id/ll_hiker_data_item"
-                        android:layout_width="match_parent"
-                        android:layout_height="wrap_content"
-                        android:orientation="horizontal"
-                        android:background="@drawable/custom_bg_white_rounded_sm"
-                        android:paddingVertical="10dp"
-                        android:paddingHorizontal="16dp"
-                        android:layout_marginBottom="8dp">
-
-                        <ImageView
-                            android:layout_width="24dp"
-                            android:layout_height="24dp"
-                            android:src="@drawable/ic_pendaki"
-                            app:tint="@color/black" />
-
-                        <TextView
-                            android:layout_width="0dp"
-                            android:layout_height="wrap_content"
-                            android:layout_weight="1"
-                            android:text="Pendaki 1"
-                            android:layout_marginTop="4dp"
-                            android:layout_marginStart="8dp" />
-
-                        <ImageView
-                            android:layout_width="24dp"
-                            android:layout_height="24dp"
-                            android:src="@drawable/ic_navigate_next_24"
-                            app:tint="@color/dark_grey" />
-                    </LinearLayout>
-
-
-                    <LinearLayout
-                        android:id="@+id/ll_hiker_data_item_2"
-                        android:layout_width="match_parent"
-                        android:layout_height="wrap_content"
-                        android:orientation="horizontal"
-                        android:background="@drawable/custom_bg_white_rounded_sm"
-                        android:paddingVertical="10dp"
-                        android:paddingHorizontal="16dp">
-
-                        <ImageView
-                            android:layout_width="24dp"
-                            android:layout_height="24dp"
-                            android:src="@drawable/ic_pendaki"
-                            app:tint="@color/black" />
-
-                        <TextView
-                            android:layout_width="0dp"
-                            android:layout_height="wrap_content"
-                            android:layout_weight="1"
-                            android:text="Pendaki 2"
-                            android:layout_marginTop="4dp"
-                            android:layout_marginStart="8dp" />
-
-                        <ImageView
-                            android:layout_width="24dp"
-                            android:layout_height="24dp"
-                            android:src="@drawable/ic_navigate_next_24"
-                            app:tint="@color/dark_grey" />
-                    </LinearLayout>
 
                 </LinearLayout>
             </LinearLayout>
@@ -405,6 +348,7 @@
                         android:textSize="14sp"/>
 
                     <TextView
+                        android:id="@+id/tvTotalTiket"
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
                         android:text="Rp 300.000"
@@ -449,12 +393,14 @@
                         android:textSize="14sp"/>
 
                     <TextView
+                        android:id="@+id/tvTotalTagihan"
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
                         android:text="Rp 300.000"
                         android:textSize="16sp"
                         android:textStyle="bold"
                         android:textColor="@color/green_primary"/>
+
                 </LinearLayout>
 
             </LinearLayout>
