feat: all fetch API implement done ( + order history api and profile mitra api )

--- a/app/src/main/res/layout/fragment_cust_mitra_profile.xml
+++ b/app/src/main/res/layout/fragment_cust_mitra_profile.xml
@@ -27,7 +27,7 @@
             android:layout_gravity="center"/>
 
         <TextView
-            android:id="@+id/textViewName"
+            android:id="@+id/textViewUsername"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:text="Lancar Jaya"
