feat: detail mitra

--- a/app/src/main/res/layout/fragment_cust_mitra_profile_details.xml
+++ b/app/src/main/res/layout/fragment_cust_mitra_profile_details.xml
@@ -24,7 +24,7 @@
     <TextView
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="Deskripsi"
+        android:text="Alamat"
         android:textStyle="bold"
         android:textSize="14sp"
         android:layout_marginBottom="8dp"/>
@@ -37,6 +37,7 @@
         android:textSize="14sp"/>
 
     <TextView
+        android:visibility="gone"
         android:id="@+id/textViewReadMore"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
