--- a/app/src/main/res/layout/fragment_cust_list_trip.xml
+++ b/app/src/main/res/layout/fragment_cust_list_trip.xml
@@ -31,7 +31,7 @@
     </androidx.recyclerview.widget.RecyclerView>
 
     <TextView
-        android:id="@+id/textView"
+        android:id="@+id/no_trips"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="@string/no_item"
