--- a/app/src/main/res/layout/fragment_cust_detail_trip.xml
+++ b/app/src/main/res/layout/fragment_cust_detail_trip.xml
@@ -175,17 +175,30 @@
                 app:layout_constraintTop_toBottomOf="@id/tv_trip_description"
                 app:layout_constraintStart_toStartOf="parent" />
 
+
+            <!-- Show Less Link -->
+            <TextView
+                android:id="@+id/tv_show_less"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_marginTop="4dp"
+                android:text="tampilkan sedikit"
+                android:textColor="@android:color/holo_blue_dark"
+                app:layout_constraintTop_toBottomOf="@id/tv_trip_description"
+                app:layout_constraintStart_toStartOf="parent"
+                android:visibility="gone"/>
+
             <!-- Partner Info -->
             <LinearLayout
                 android:id="@+id/ll_partner_info"
                 android:layout_width="0dp"
                 android:layout_height="wrap_content"
                 android:orientation="horizontal"
-                app:layout_constraintTop_toBottomOf="@id/tv_read_more"
+                app:layout_constraintTop_toBottomOf="@id/tv_trip_description"
                 app:layout_constraintStart_toStartOf="parent"
                 app:layout_constraintEnd_toEndOf="parent"
                 android:padding="16dp"
-                android:layout_marginTop="8dp"
+                android:layout_marginTop="35dp"
                 android:gravity="center_vertical"
                 android:layout_marginBottom="8dp"
                 android:background="@drawable/custom_bg_white_rounded">
