feat: payment gateway midtrans

--- a/app/src/main/res/navigation/nav_graph_cust.xml
+++ b/app/src/main/res/navigation/nav_graph_cust.xml
@@ -114,6 +114,9 @@
         <argument
             android:name="trip"
             app:argType="com.entsh104.highking.data.model.TripFilter" />
+        <action
+            android:id="@+id/action_nav_cart_to_nav_orders"
+            app:destination="@id/nav_orders" />
     </fragment>
     <fragment
         android:id="@+id/nav_confirmation_accepted"
