--- a/app/src/main/res/layout/fragment_cust_cart.xml
+++ b/app/src/main/res/layout/fragment_cust_cart.xml
@@ -76,6 +76,7 @@
                             android:textColor="@android:color/darker_gray" />
 
                         <TextView
+                            android:id="@+id/tvDateTrip"
                             android:layout_width="wrap_content"
                             android:layout_height="wrap_content"
                             android:text="DD/MM/YYYY"
