feat: Request Reset Password Api, feat: Implement Reset Password on Fragment, style: Implement Reset Password status

--- a/app/src/main/res/navigation/nav_graph_auth.xml
+++ b/app/src/main/res/navigation/nav_graph_auth.xml
@@ -71,5 +71,9 @@
         android:id="@+id/resetPasswordFragment"
         android:name="com.entsh104.highking.ui.auth.resetpassword.ResetPasswordFragment"
         android:label="fragment_reset_password"
-        tools:layout="@layout/fragment_reset_password" />
+        tools:layout="@layout/fragment_reset_password" >
+        <action
+            android:id="@+id/action_resetPasswordFragment_to_verificationFragment"
+            app:destination="@id/verificationFragment" />
+    </fragment>
 </navigation>
