--- a/app/src/main/res/layout/fragment_cust_beranda.xml
+++ b/app/src/main/res/layout/fragment_cust_beranda.xml
@@ -126,7 +126,7 @@
                 <TextView
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:text="Temukan Trip Terdekat!"
+                    android:text="Jelajahi Semua Trip!"
                     android:textSize="16sp"
                     android:paddingStart="8dp"
                     android:paddingEnd="8dp"
