--- a/app/src/main/res/navigation/nav_graph_cust.xml
+++ b/app/src/main/res/navigation/nav_graph_cust.xml
@@ -180,7 +180,7 @@
     <fragment
         android:id="@+id/fragmentCustProfileEdit"
         android:name="com.entsh104.highking.FragmentCustProfileEdit"
-        android:label="fragment_cust_profile_edit"
+        android:label="Edit Profile"
         tools:layout="@layout/fragment_cust_profile_edit" >
         <action
             android:id="@+id/action_fragmentCustProfileEdit_to_nav_profile"
