--- a/app/src/main/res/navigation/nav_graph_cust.xml
+++ b/app/src/main/res/navigation/nav_graph_cust.xml
@@ -179,7 +179,7 @@
         tools:layout="@layout/fragment_cust_review" />
     <fragment
         android:id="@+id/fragmentCustProfileEdit"
-        android:name="com.entsh104.highking.FragmentCustProfileEdit"
+        android:name="com.entsh104.highking.ui.cust.profile.FragmentCustProfileEdit"
         android:label="Edit Profile"
         tools:layout="@layout/fragment_cust_profile_edit" >
         <action
