feat: favorite item

--- a/app/src/main/res/layout/fragment_cust_profile.xml
+++ b/app/src/main/res/layout/fragment_cust_profile.xml
@@ -247,6 +247,20 @@
                             android:layout_marginBottom="16dp"
                             android:text="Logout" />
 
+                        <Button
+                            android:id="@+id/btnFavoriteMountain"
+                            android:layout_width="match_parent"
+                            android:layout_height="wrap_content"
+                            android:layout_marginBottom="16dp"
+                            android:text="Mountain Favorite" />
+
+                        <Button
+                            android:id="@+id/btnFavoriteTrip"
+                            android:layout_width="match_parent"
+                            android:layout_height="wrap_content"
+                            android:layout_marginBottom="16dp"
+                            android:text="Trip Favorite" />
+
                     </LinearLayout>
                 </LinearLayout>
 
