--- a/app/src/main/res/layout/fragment_cust_filter.xml
+++ b/app/src/main/res/layout/fragment_cust_filter.xml
@@ -23,8 +23,8 @@
         android:id="@+id/autoCompleteLocation"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
-        android:layout_marginHorizontal="18dp"
-        android:layout_marginTop="8dp"
+        android:layout_marginHorizontal="24dp"
+        android:layout_marginTop="6dp"
         android:background="@drawable/custom_bg_white_rounded"
         android:drawableStart="@drawable/ic_place_outline"
         android:drawablePadding="8dp"
@@ -42,7 +42,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginStart="24dp"
-        android:layout_marginTop="24dp"
+        android:layout_marginTop="16dp"
         android:text="Rentang Tanggal"
         android:textSize="16sp"
         android:textStyle="bold"
@@ -55,7 +55,7 @@
         android:layout_height="wrap_content"
         android:layout_marginHorizontal="18dp"
         android:layout_marginStart="24dp"
-        android:layout_marginTop="8dp"
+        android:layout_marginTop="6dp"
         android:background="@drawable/custom_bg_white_rounded"
         android:drawablePadding="8dp"
         android:gravity="center_vertical"
@@ -64,6 +64,7 @@
         android:textSize="16sp"
         app:drawableStartCompat="@drawable/ic_calendar"
         app:drawableTint="@android:color/darker_gray"
+        app:layout_constraintEnd_toStartOf="@+id/textViewDate2"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/textView2" />
 
@@ -71,7 +72,8 @@
         android:id="@+id/textViewDate2"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
-        android:layout_marginHorizontal="18dp"
+        android:layout_marginEnd="24dp"
+        android:layout_marginStart="8dp"
         android:layout_marginTop="8dp"
         android:background="@drawable/custom_bg_white_rounded"
         android:drawablePadding="8dp"
@@ -81,6 +83,7 @@
         android:textSize="16sp"
         app:drawableStartCompat="@drawable/ic_calendar"
         app:drawableTint="@android:color/darker_gray"
+        app:layout_constraintStart_toEndOf="@+id/textViewDate"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/textView2" />
 
