--- a/app/src/main/res/navigation/nav_graph_cust.xml
+++ b/app/src/main/res/navigation/nav_graph_cust.xml
@@ -86,6 +86,12 @@
         <action
             android:id="@+id/action_nav_profile_to_fragmentCustProfileEdit"
             app:destination="@id/fragmentCustProfileEdit" />
+        <action
+            android:id="@+id/action_nav_profile_to_favoriteMountainFragment"
+            app:destination="@id/favoriteMountainFragment2" />
+        <action
+            android:id="@+id/action_nav_profile_to_favoriteTripFragment"
+            app:destination="@id/favoriteTripFragment" />
     </fragment>
 
     <fragment
@@ -202,5 +208,23 @@
         <action
             android:id="@+id/action_fragmentCustProfileEdit_to_nav_profile"
             app:destination="@id/nav_profile" />
+    </fragment>
+    <fragment
+        android:id="@+id/favoriteMountainFragment2"
+        android:name="com.entsh104.highking.ui.cust.mountain.FavoriteMountainFragment"
+        android:label="Favorite Mountain"
+        tools:layout="@layout/fragment_cust_fav_mountain" >
+        <action
+            android:id="@+id/action_listMountain_to_detailMountain"
+            app:destination="@id/nav_detailMountain" />
+    </fragment>
+    <fragment
+        android:id="@+id/favoriteTripFragment"
+        android:name="com.entsh104.highking.ui.cust.trip.FavoriteTripFragment"
+        android:label="Favorite Trip"
+        tools:layout="@layout/fragment_cust_fav_trip" >
+        <action
+            android:id="@+id/action_listTrip_to_detailTrip"
+            app:destination="@id/nav_detailTrip" />
     </fragment>
 </navigation>
